# fastapi-boilerplate

./: 404.html  README.md  index.html  mkdocs-ko.yml  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
Repository/01/: pyproject.toml
Repository/02/: pyproject.toml
docs/: CNAME  index.md  missing-translation.md  plain-asynchronous-restful-api.md  plain-synchronous-restful-api.md
docs/en/: index.md  mkdocs.yml  simple-asynchronous-restful-api.md  simple-synchronous-restful-api.md
docs/en/docs/: index.md
docs/en/overrides/: main.html
docs/ko/: index.md  mkdocs.yml  simple-asynchronous-restful-api.md  simple-synchronous-restful-api.md
ko/: 404.html  index.html  sitemap.xml
ko/search/: search_index.json
ko/simple-asynchronous-restful-api/: index.html
ko/simple-synchronous-restful-api/: index.html
ko/tags/: index.html
migrations/: script.py.mako
overrides/: main.html
scripts/: docs.py
search/: search_index.json
simple-asynchronous-restful-api/: index.html
simple-synchronous-restful-api/: index.html
tags/: index.html
