[tool.poetry]
name = "fastapi-boilerplate"
version = "0"
description = "FastAPI Boilerplate Collection"
authors = ["weekwith.me <leedobby@weekwith.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mdx-include = "^1.4.1"
mkdocs-markdownextradata-plugin = "^0.2.4"
mkdocs = "^1.2.3"
mkdocs-material = "^7.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
