[tool.poetry]
name = "plain-asynchronous-restful-api"
version = "1"
description = "Plain asynchronous RESTful API"
authors = ["weekwith.me <leedobby@weekwith.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.7.5"
SQLAlchemy = "^1.4.27"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
python-jose = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
